---
config:
  theme: default
---
erDiagram
    BOOK {
      string isbn PK "Primary key, book ISBN"
      string title "Book title"
      string publisher "Publisher name"
      int published_year "Year of publication"
      string category "Book category"
      timestamp created_at "Date added"
      timestamp updated_at "Date last updated"
    }
    AUTHOR {
      long id PK "Primary Key, Unique"
      string full_name "Full name of the author"
      date birth_date "Date of birth"
      string country "Country of origin"
      string bio "Short biography"
      timestamp created_at "Date added"
      timestamp updated_at "Date last updated"
    }
    BOOK_AUTHOR {
      string book_isbn PK, FK "References BOOK.isbn"
      long author_id PK, FK "References AUTHOR.id"
    }
    BOOK ||--o{ BOOK_AUTHOR : "is written by"
    AUTHOR ||--o{ BOOK_AUTHOR : "is author of"
